--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -40,6 +40,7 @@
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="8dp"
                 android:text="@string/about_1"
                 android:textSize="18sp" />
 
@@ -47,7 +48,20 @@
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/resources" />
+                android:layout_margin="8dp"
+                android:autoLink="web"
+                android:linksClickable="true"
+                android:text="@string/resources"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/about_privacy"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:autoLink="web"
+                android:linksClickable="true"
+                android:text="@string/privacy_url" />
         </LinearLayout>
     </ScrollView>
 
