hotfixed: privacy policy check fails on subsequent opens

--- a/app/src/main/res/layout/activity_privacy.xml
+++ b/app/src/main/res/layout/activity_privacy.xml
@@ -12,11 +12,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="16dp"
         android:autoLink="web"
         android:linksClickable="true"
         android:text="@string/privacy_intro"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/open_privacy"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/confirm_privacy"
         app:layout_constraintBottom_toTopOf="@+id/submit_privacy"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,8 +48,9 @@
         android:id="@+id/open_privacy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="16dp"
         android:clickable="true"
+        android:focusable="true"
         android:onClick="openPrivacy"
         android:text="@string/privacy_open"
         app:layout_constraintBottom_toTopOf="@+id/confirm_privacy"
@@ -97,6 +98,7 @@
                 android:layout_marginBottom="16dp"
                 android:autoLink="web"
                 android:clickable="true"
+                android:focusable="true"
                 android:scrollbarAlwaysDrawVerticalTrack="true"
                 android:scrollbars="horizontal"
                 android:text="@string/privacy_basic"
